--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
                      <div class="col-md-4 status">
                         <h5>$<span id="subTotal">1278</span></h5>
-                        <h5>$0</h5>
+                        <h5>$<span id="tax">128</span></h5>
                         <h5>$<span id="totalAmount">1278</span></h5>
                      </div>
                   </div>
